<resources>
    <string name="app_name">Meal Calculator</string>

    <string name="food_name">Name</string>
    <string name="food_calories">Calories</string>
    <string name="food_total">Total</string>
    <string name="food_fiber">Fibers</string>
    <string name="food_sugars">Sugars</string>
    <string name="food_fats">Fats</string>
    <string name="food_carbs">Carbohydrates</string>
    <string name="food_fats_saturated">Saturated</string>
    <string name="food_fat_unsaturated">Unsaturated</string>
    <string name="food_proteins">Proteins</string>
    <string name="food_glycemic_index">Glycemic Index</string>
    <string name="submit">Submit</string>
    <string name="per_100g">Per 100g</string>
    <string name="search">Search</string>
    <string name="new_food">New food</string>
    <string name="journal">Journal</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="warning">Warning</string>
    <string name="msg_warning_delete_food">Are you sure you want to delete \"%1$s\" permanently from database?</string>
    <string name="grams">Grams</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="recipes">Recipes</string>
    <string name="save_as_recipe">Save as Recipe</string>
    <string name="load_from_recipe">Load from Recipe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_name">Recipe Name…</string>
    <string name="conflicts">Quantity Conflicts</string>
    <string name="existent_quantity">Existent Quantity</string>
    <string name="from_recipe_quantity">From Recipe Quantity</string>
</resources>
