<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_menu_meal_add_food"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/add"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_menu_meal_save"
        android:icon="@drawable/ic_save_black_24dp"
        android:title="@string/save"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_menu_save_as_recipe"
        android:title="@string/save_as_recipe"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_menu_load_from_recipe"
        android:title="@string/load_from_recipe"
        app:showAsAction="never" />
</menu>